--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,5 +37,17 @@
 		<filter-name>httpHeaderSecurity</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<error-page>
+  		<error-code>500</error-code>
+ 		 <location>/common/error500.jsp</location>
+	</error-page>
+	
+	<error-page>
+  		<error-code>404</error-code>
+ 		 <location>/common/error404.jsp</location>
+	</error-page>
+	
+	
 
 </web-app>
