fix bug in filter product

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,10 @@
   		<error-code>404</error-code>
  		 <location>/common/error404.jsp</location>
 	</error-page>
+	<error-page>
+  		<error-code>405</error-code>
+ 		 <location>/common/error500.jsp</location>
+	</error-page>
 	
 	
 	
